--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,44 +1,3 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100dvh;
-  font-family: Lato, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
-
-.circles {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  height: 100dvh;
-  z-index: -1;
-}
-
-.circles li {
-	position: absolute;
-	display: block;
-	list-style: none;
-	width: 20px;
-	height: 20px;
-	background: rgba(96, 183, 199, 0.1);
-	animation: animate 25s linear infinite;
-	bottom: calc(-150px - 40vh);
-}
-
-.circles li:nth-child(1) {
-	left: 25%;
-	width: 80px;
-	height: 80px;
-	animation-delay: 0s;
-	animation-duration: 20s;
-	border-radius: 50%;
-	border-top-left-radius: 0 !important;
-	background: rgba(47, 44, 92, 0.1);
-}
-
-
 .description {
   display: flex;
   flex-direction: column;
@@ -46,31 +5,57 @@
   align-items: inherit;
   font-size: 0.85rem;
   z-index: 2;
-  padding: 50px 80px;
+  height: 200px;
+  width: 360px;
+  position: relative;
 
-
-  /* background: linear-gradient(to bottom right, transparent, #f2f7f2), url(./bg.svg); */
   background: url(./bg.svg);
   background-color: #f2f7f2;
-  filter: contrast(100%) brightness(125%);  
+  filter: contrast(100%) brightness(125%);
 
-  /* background: rgba(255, 255, 255, 0.3); */
-  border-radius: 1em;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4.7px);
-  -webkit-backdrop-filter: blur(4.7px);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 4px 6px #181818;
+}
 
+.colorBar {
+  background-color: #9bcbe1;
+  box-shadow: 1px 2px 1px #fff, inset 0px 1px 2px #2f4650, 1px 2px 1px #fff;
+  height: 4px;
+  position: absolute;
+  width: 320px;
+}
+
+.colorBar:first-of-type {
+  top: 20px;
+}
+.colorBar:last-of-type {
+  bottom: 20px;
 }
 
 .description h1 {
-  font-size: 1.75rem;
   margin: 0.5rem;
-  font-family: Nanum Myeongjo, serif;
+
+  font-family: "Copperplate", serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: rgba(24, 24, 24, 0.8);
+  text-shadow: 1px 2px 3px #fff, 0px 0px 0px #000, 2px 3px 4px #fff;
+  letter-spacing: 0.25rem;
 }
 
 .description h2 {
   margin: 0.25rem;
+}
+
+.description h2,
+.city {
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  text-shadow: 1px 2px 3px #fff, 0px 0px 0px #000, 2px 3px 4px #fff;
+  color: #8e5572;
+}
+
+.city {
+  margin: 0 0 0.5rem 0;
 }
 
 .description :not(h1) {
@@ -78,10 +63,18 @@
   font-weight: lighter;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100px;
+}
+
+.links img {
+  width: 20px;
+  height: 20px;
+
+  color: #8e5572;
 }
 
 /* Mobile */
@@ -93,25 +86,7 @@
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
-
 }
 
 @media (prefers-color-scheme: dark) {
-
 }
-
-@keyframes animate {
-	0% {
-		transform: translateY(0) rotate(0deg);
-		opacity: 0;
-	}
-	50% {
-		transform: translateY(-60vh) rotate(360deg);
-		opacity: 1;
-	}
-	100% {
-		transform: translateY(-120vh) rotate(720deg);
-		opacity: 0;
-	}
-}
-
